# onde-cli

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
.agents/skills/git/: SKILL.md
.github/workflows/: ci.yml  release-crates.yml  release-github.yml  release-homebrew.yml  release-npm.yml  release-pypi.yml
npm/: README.md.tmpl  package-main.json.tmpl  package.json.tmpl
npm/onde-cli/: README.md  package-lock.json  package.json  tsconfig.json
npm/onde-cli/src/: index.ts
npm/scripts/: render-main-package.cjs  render-platform-package.cjs
pypi/: README.md  pyproject.toml
src/: app.rs  chat.rs  finetune.rs  gguf.rs  gresiq.rs  hf.rs  hf_clone.rs  hf_search.rs  hf_upload.rs  main.rs  merge.rs  project.rs  token.rs  ui.rs
