[package]
name = "onde-cli"
version = "0.1.1"
edition = "2024"
description = "Terminal UI for signing up, signing in, and managing your Onde Inference account."
license = "MIT OR Apache-2.0"
repository = "https://github.com/ondeinference/onde-cli"
homepage = "https://ondeinference.com"
documentation = "https://docs.rs/onde-cli"
readme = "README.md"
keywords = ["onde", "cli", "tui", "auth", "inference"]
categories = ["command-line-utilities"]
authors = ["Seto Elkahfi <hej@setoelkahfi.se>"]

[[bin]]
name = "onde"
path = "src/main.rs"

[build-dependencies]
dotenvy = "0.15"

[dependencies]
anyhow = "1"
crossterm = { version = "0.28", features = ["event-stream"] }
dirs = "5"
futures = "0.3"
log = "0.4"
ratatui = "0.29"
libc = "0.2"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
smbcloud-auth-sdk = { path = "../smbcloud-cli/crates/smbcloud-auth-sdk" }
smbcloud-model = { path = "../smbcloud-cli/crates/smbcloud-model" }
smbcloud-network = { path = "../smbcloud-cli/crates/smbcloud-network" }
smbcloud-gresiq-sdk = { path = "../smbcloud-cli/crates/smbcloud-gresiq-sdk" }

# To publish to crates.io, switch back to version specs and remove path deps:
# smbcloud-auth-sdk = { version = "0.3" }
# smbcloud-model = { version = "0.3" }
# smbcloud-network = { version = "0.3" }
# smbcloud-gresiq-sdk = { version = "0.1" }
