[package]
name = "onde-cli"
version = "0.2.1"
edition = "2024"
description = "Terminal UI for signing up, signing in, and managing your Onde Inference account."
license = "MIT OR Apache-2.0"
repository = "https://github.com/ondeinference/onde-cli"
homepage = "https://ondeinference.com"
documentation = "https://docs.rs/onde-cli"
readme = "README.md"
keywords = ["onde", "cli", "tui", "auth", "inference"]
categories = ["command-line-utilities"]
authors = ["Seto Elkahfi <hej@setoelkahfi.se>"]

[[bin]]
name = "onde"
path = "src/main.rs"

[build-dependencies]
dotenvy = "0.15"

[dependencies]
anyhow = "1"
crossterm = { version = "0.28", features = ["event-stream"] }
dirs = "5"
futures = "0.3"
log = "0.4"
ratatui = "0.29"
libc = "0.2"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls-native-roots"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
smbcloud-auth-sdk = "0.3.34"
smbcloud-model = "0.3.35"
smbcloud-network = "0.3.35"
smbcloud-gresiq-sdk = "0.3.35"
candle-core = "0.10.2"
candle-nn = "0.10.2"
tokenizers = { version = "0.20", default-features = false, features = ["onig"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
half = "2"
sha2 = "0.10"
mistralrs = { git = "https://github.com/setoelkahfi/mistral.rs", branch = "fix/all-platform-fixes" }
# onde = { path = "../onde" }
onde = { version = "1.0.0", git = "https://github.com/ondeinference/onde", branch = "development" }

# Metal and Accelerate are macOS-only frameworks; Cargo merges features so on
# macOS these are added on top of the base candle-core dep above.
[target.'cfg(target_os = "macos")'.dependencies]
candle-core = { version = "0.10.2", features = ["metal", "accelerate"] }
mistralrs = { git = "https://github.com/setoelkahfi/mistral.rs", branch = "fix/all-platform-fixes", features = ["metal"] }

# ---------------------------------------------------------------------------
# Local development overrides
# Uncomment the [patch.crates-io] block below to use path deps while working
# on the upstream crates alongside onde-cli.  Never commit with this active.
# ---------------------------------------------------------------------------
# [patch.crates-io]
# smbcloud-auth-sdk   = { path = "../smbcloud-cli/crates/smbcloud-auth-sdk" }
# smbcloud-model      = { path = "../smbcloud-cli/crates/smbcloud-model" }
# smbcloud-network    = { path = "../smbcloud-cli/crates/smbcloud-network" }
# smbcloud-gresiq-sdk = { path = "../smbcloud-cli/crates/smbcloud-gresiq-sdk" }
# candle-core         = { path = "../candle/candle-core" }
# candle-nn           = { path = "../candle/candle-nn" }
