[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "onde-cli"
description = "Terminal UI for signing up, signing in, and managing your Onde Inference account."
readme = "README.md"
requires-python = ">=3.8"
dynamic = ["version"]
license = { text = "MIT OR Apache-2.0" }
authors = [{ name = "Seto Elkahfi", email = "hej@setoelkahfi.se" }]
keywords = ["onde", "cli", "tui", "inference", "llm", "on-device"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://ondeinference.com"
Documentation = "https://ondeinference.com"
Repository = "https://github.com/ondeinference/onde-cli"
Issues = "https://github.com/ondeinference/onde-cli/issues"

[tool.maturin]
manifest-path = "../Cargo.toml"
bindings = "bin"
strip = true
